<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleEquipo">

    <NumberPicker
        android:id="@+id/numberPicker2"
        android:layout_width="117dp"
        android:layout_height="221dp"
        android:layout_marginStart="252dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnEditar"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerCiudad2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEditar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtContenidoEquipo"
        android:layout_width="170dp"
        android:layout_height="115dp"
        android:layout_marginBottom="28dp"
        android:text="@string/text_aquiestaUsr"
        app:layout_constraintBottom_toTopOf="@+id/modEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="40dp"
        android:text="@string/String_modificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/infoEquipo"
        app:layout_constraintBottom_toTopOf="@+id/txtContenidoEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/modEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/modTecnico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/modTecnico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/hint_dt"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txtSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Ciudad"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCiudad2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtCampeonatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Numero_Campeonatos"
        app:layout_constraintBottom_toTopOf="@+id/numberPicker2"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>